# viga

./: .gitignore  ARCHITECTURE.md  Cargo.toml  USAGE.md  live_demo.py  run_comparison.sh
benches/: event_benchmark.rs
python_baseline/: main.py
scripts/: export_yolo.py
src/: alert_engine.rs  detector_ga.rs  detector_standard.rs  lib.rs  perception.rs  spatial_tracking.rs
tests/: yolo_integration_test.rs
